# inference-server-temp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.worker  MAKE_STATUS.md  Makefile  README.md  check_make.sh  docker-compose.yml  prometheus.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: ml-production-engineer.md
app/: config.py  main.py
app/models/: base.py  registry.py
app/models/runners/: __init__.py  scoring.py  superres.py
app/services/: metrics.py  storage.py
app/tasks/: celery_app.py  gpu_worker.py
app/utils/: idempotency.py  timing.py
tests/: test_task_flow.py
